--- a/public/starter-template.css
+++ b/public/starter-template.css
@@ -22,6 +22,13 @@ body {
     
 }
 
+
+.tableRow {
+	width: 150px;
+	    font-size: 14px;
+
+}
+
 //input {
 //    font-size: 14px;
 //    padding-left: 20px;
@@ -34,9 +41,15 @@ body {
 
 }
 
+#filter {
+	float: right;
 
+}
 
-
+#exportButton {
+	float: right;
+	background-color: "pink";
+}
 .side-nav {
 	width:10px;
 }
@@ -119,6 +132,13 @@ body {
 	    display: inline-block;
 	    float: left;
 
+}
+
+
+.mainy {
+     margin-left: 202px;
+     padding-top: 10px;
+     
 }
 
 .headingA {
