Code cleanup and more custom bi

--- a/views/businessIntelligence.hbs
+++ b/views/businessIntelligence.hbs
@@ -108,7 +108,7 @@
             {{#if myJSONcreationTimes}}
              <form method="post" action="/exportCSV">
                 <input type="hidden" name="thisReport" id="thisReport" value="{{{thisReport}}}" />
-                <button type="submit" class="btn btn-sm btn-outline-secondary" name="exportButton" id="exportButton">Export CSV file</button>
+                <button type="submit" class="btn btn-sm btn-outline-secondary" id="filter" name="filter"">Export CSV file</button>
              </form>
 	        {{/if}}
 	     </div>
