--- a/views/user_dashboard.hbs
+++ b/views/user_dashboard.hbs
@@ -62,7 +62,7 @@
       </tbody>
     </table>
   {{else}}
-    <p>Welcome {{name}}, you do not currenty have any awards created.</p>
+    <p>Welcome {{name}}, you do not currently have any awards created.</p>
     <p>Edit your profile to upload a signature image and create an Award!</p>
   {{/if}}
 </div>
